--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite": "^7.1.3"
   },
   "dependencies": {
-    "image-size": "^2.0.2"
+    "@pixiv/three-vrm": "^3.4.2",
+    "image-size": "^2.0.2",
+    "three": "^0.179.1"
   }
 }
