--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite && npm run scss:watch",
     "build": "node ./js/getImageSizes.js && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "scss:watch": "npx sass --watch scss/main.scss css/main.css --no-source-map"
   },
   "repository": {
     "type": "git",
