--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "getimgsizes": "node ./js/getImageSizes.js",
     "dev": "vite && npm run scss:watch",
-    "build": "node ./js/getImageSizes.js && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "scss:watch": "npx sass --watch scss/main.scss css/main.css --no-source-map"
   },
